[package]
name = "rdf4rust"
version = "0.1.0"
authors = ["Lixi Alié Conrads <lixiconrads@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["serde", "v4", "v5"] }
base64 = "0.13.0"
chrono = "0.4.19"